<resources>
    <string name="app_name">potatoService</string>
    <string name="title_home">Home</string>
    <string name="search_hint">키워드를 입력하여 검색</string>
    <!--MyPage_Spinner-->
    <string-array name="volunteer_status">
        <item>전체보기</item>
        <item>신청 완료됨</item>
        <item>확정 대기 중</item>
        <item>수행 완료됨</item>
    </string-array>
  
  
    <!-- MapFragment -->
    <string name="error_auth_failure">API 인증에 실패</string>
    <string name="error_server_communication_failure">서버 통신 실패</string>
    <string name="error_unknown">알 수 없는 오류</string>

    <!-- HomeFragment -->
    <string name="closed_volunteer_look">마감 제외</string>

    <string name="detail">상세 보기</string>
    <string name="review1">고지된 업무 내용이 실제와 일치하였나요?</string>
    <string name="review2">담당자는 친절하였나요?</string>
    <string name="review3">다음에도 참여하고 싶으신가요?</string>
    <string name="volunteer_address">봉사 활동 위치</string>
    <string name="call">전화로 문의하기</string>
    <string name="request">신청하기</string>
    <string name="봉사장소">봉사 장소 : %1$s</string>
    <string name="봉사설명">봉사 설명 : %1$s</string>
    <string name="카테고리">봉사 종류 : %1$s</string>

    <string name="마감기간">마감 기간 : ~ %1$s</string>
    <string name="모집인원">모집 인원 : %1$d명</string>
    <string name="활동날짜">활동 날짜 : %1$s ~ %2$s</string>
    <string name="공지날짜">공지 날짜 : %1$s ~ %2$s</string>
    <string name="활동시간">활동 시간 : %1$d시 ~ %2$d시</string>
    <string name="가능연령">가능 연령 : %1$s</string>
    <string name="단체봉사">단체 봉사 : %1$s</string>
    <string name="봉사기관">봉사 기관 : %1$s</string>
    <string name="담당직원">담당 직원 : %1$s</string>
    <string name="전화번호">전화 번호 : %1$s</string>
    <string name="url">기관 url : %1$s</string>
    <string name="기관리뷰">%1$s 리뷰</string>
    <string name="loading">로딩 중…</string>
    <string name="지도">지도 크게 보기</string>
    <string name="검색결과">총 %1$d건</string>

    <!--    MyPage_custom_dialog-->
    <string name="question_1">간단한 설문에 답해주실 수 있나요?</string>
    <string name="question_2">수행하신 봉사 내용은 고지된 내용과 일치하였나요?</string>
    <string name="question_3">봉사 기관의 담당자 분은 친절한 태도로 도와주셨나요?</string>
    <string name="question_4">이 봉사활동에 다시 참여하고 싶은 마음이 있나요?</string>
    <string name="question_5">설문에 답해주셔서 감사합니다</string>


</resources>