<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="detail"
            type="com.example.potatoservice.model.remote.ActivityDetail" />

        <variable
            name="institute"
            type="com.example.potatoservice.model.remote.Institute" />


        <variable
            name="viewmodel"
            type="com.example.potatoservice.ui.detail.DetailViewModel" />
    </data>


    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@color/base_white"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/base_white">


                <!--                봉사내용-->

                <include
                    android:id="@+id/activity_detail_item"
                    layout="@layout/activity_detail_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:detail="@{detail}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:viewmodel="@{viewmodel}" />


                <!--                봉사 리뷰-->

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_plain"
                    android:gravity="center"
                    android:orientation="vertical"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_detail_item">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@{@string/기관리뷰(institute.name)}"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewmodel.review1Question}"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <RatingBar
                        android:id="@+id/ratingBar1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="2.5"
                        android:stepSize="0.5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewmodel.review2Question}"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <RatingBar
                        android:id="@+id/ratingBar2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="2.5"
                        android:stepSize="0.5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewmodel.review3Question}"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <RatingBar
                        android:id="@+id/ratingBar3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="2.5"
                        android:stepSize="0.5" />
                </LinearLayout>

                <!--                봉사활동위치-->
                <TextView
                    android:id="@+id/volunteer_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/volunteer_address"

                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


                <!--                지도, 현재위치-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/detail_map_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/volunteer_address">

                    <com.kakao.vectormap.MapView
                        android:id="@+id/detail_map_view"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:background="@color/base_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageButton
                        android:id="@+id/button_current_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/ic_map_location_button_background"
                        android:padding="10dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_map_current_location"
                        app:layout_constraintBottom_toBottomOf="@id/detail_map_view"
                        app:layout_constraintEnd_toEndOf="@id/detail_map_view" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/map_size_up_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_plain"
                    android:text="@string/지도"
                    android:textColor="@color/point_brown_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detail_map_layout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="80dp"
                    android:layout_marginTop="10dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <!-- 신청하기 전화로 문의하기            -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50121653" />

            <Button
                android:id="@+id/request_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_plain"
                android:text="@string/request"
                android:textColor="@color/point_brown_2"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_plain"
                android:text="@string/call"
                android:textColor="@color/point_brown_2"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- 닫기 버튼        -->
        <ImageView
            android:id="@+id/detail_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="top|end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_close" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/loading_grey"
                android:gravity="center_horizontal|center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="20sp" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>
    </FrameLayout>


</layout>
