<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homefragment"
            type="com.example.potatoservice.ui.home.HomeFragment" />
    </data>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            tools:context=".ui.home.HomeFragment">

            <LinearLayout
                android:id="@+id/search_bar_layout"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/search_bar"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/search_hint"
                    android:textColorHint="#424242"
                    android:background="@drawable/bg_plain"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/search_button"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/magnifier"
                    app:layout_constraintBottom_toTopOf="@+id/spinner_scroll_view"
                    app:layout_constraintStart_toEndOf="@+id/search_bar" />
            </LinearLayout>


            <HorizontalScrollView
                android:id="@+id/spinner_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/base_beige_1"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_bar_layout">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp">

                    <Spinner
                        android:id="@+id/sort"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:popupBackground="@color/base_beige_1"/>
                    <Spinner
                        android:id="@+id/major_regional_categories"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:popupBackground="@color/base_beige_1"/>

                    <Spinner
                        android:id="@+id/minor_regional_categories"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:popupBackground="@color/base_beige_1"/>

                    <Spinner
                        android:id="@+id/volunteer_activities_categories"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:popupBackground="@color/base_beige_1"/>

                    <Spinner
                        android:id="@+id/age_categories"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"/>
                </LinearLayout>
            </HorizontalScrollView>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_result_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_scroll_view">

<!--                <TextView-->
<!--                    android:layout_width="200dp"-->
<!--                    android:layout_height="30sp"-->
<!--                    android:text="@{@string/검색결과(homefragment.numberOfElements)}"-->
<!--                    android:textSize="20sp"-->
<!--                    android:textColor="#424242"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->
<!--                    android:layout_marginStart="10dp"/>-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:textColor="#424242"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/beforeDeadlindOnly_button"
                    android:text="@string/closed_volunteer_look"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/beforeDeadlindOnly_button"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_result_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="56dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_result_top"
                tools:listitem="@layout/service_item"/>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading_shimmer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                android:layout_marginBottom="56dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_result_top">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <include layout="@layout/service_loading_item"/>
                    <include layout="@layout/service_loading_item"/>
                    <include layout="@layout/service_loading_item"/>
                    <include layout="@layout/service_loading_item"/>
                    <include layout="@layout/service_loading_item"/>
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/loading_grey"
                android:gravity="center_horizontal|center_vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading"
                    android:textSize="20sp" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>
    </FrameLayout>

</layout>
